# wordle_rust

./: Cargo.toml  HONOR-CODE.md  README.md  input.in  input.json  test.out  text.out
src/: main.rs
src/gui/: main.rs
