[package]
name = "wordle"
version = "0.1.0"
edition = "2024"
default-run = "wordle" 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.16"
colored = "3.0.0"
rand = "0.8.5"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
config = "0.13"
eframe = { version = "0.24", optional = true }
egui = { version = "0.24", optional = true }

[features]
default = []
gui = ["eframe", "egui"]

[dev-dependencies]
assert-json-diff = "2.0"
ntest = "0.9"
pretty_assertions = "1.3"

[[bin]]
name = "wordle"
path = "src/main.rs"

[[bin]]
name = "wordle-gui"
path = "src/gui/main.rs"
required-features = ["gui"]  



